// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model E2E Test addRelationship() should create a bi-directional relationship 1`] = `
[
  [
    "region=region,account=account,app=app",
  ],
]
`;

exports[`Model E2E Test addRelationship() should create a bi-directional relationship 2`] = `
[
  [
    "service=service,account=account,app=app",
  ],
]
`;

exports[`Model E2E Test common functions Test common functions Test Account getAncestors() 1`] = `
[
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Account getBoundaryMembers() 1`] = `
[
  "account=account,app=test",
  "app=test",
  "service=service,account=account,app=test",
  "server=backend,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
  "filesystem=filesystem,region=region,account=account,app=test",
  "pipeline=pipeline,account=account,app=test",
  "image=image:v1,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Account getChildren() 1`] = `
[
  "image",
  "pipeline",
  "region",
  "server",
  "service",
]
`;

exports[`Model E2E Test common functions Test common functions Test Account getContext() 1`] = `"account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Account getParents() 1`] = `
[
  "app",
]
`;

exports[`Model E2E Test common functions Test common functions Test Account getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Account synth() 1`] = `
{
  "accountId": "account",
  "accountType": "aws",
}
`;

exports[`Model E2E Test common functions Test common functions Test App getAncestors() 1`] = `
[
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test App getBoundaryMembers() 1`] = `
[
  "app=test",
  "account=account,app=test",
  "service=service,account=account,app=test",
  "server=backend,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
  "filesystem=filesystem,region=region,account=account,app=test",
  "pipeline=pipeline,account=account,app=test",
  "image=image:v1,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test App getChildren() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test common functions Test App getContext() 1`] = `"app=test"`;

exports[`Model E2E Test common functions Test common functions Test App getParents() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test App getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test App synth() 1`] = `
{
  "name": "test",
}
`;

exports[`Model E2E Test common functions Test common functions Test Deployment getAncestors() 1`] = `
[
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Deployment getBoundaryMembers() 1`] = `
[
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Deployment getChildren() 1`] = `
[
  "execution",
]
`;

exports[`Model E2E Test common functions Test common functions Test Deployment getContext() 1`] = `"deployment=v1,server=backend,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Deployment getParents() 1`] = `
[
  "server",
]
`;

exports[`Model E2E Test common functions Test common functions Test Deployment getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Deployment synth() 1`] = `
{
  "deploymentTag": "v1",
}
`;

exports[`Model E2E Test common functions Test common functions Test Environment getAncestors() 1`] = `
[
  "environment=qa,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Environment getBoundaryMembers() 1`] = `
[
  "environment=qa,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Environment getChildren() 1`] = `
[
  "execution",
]
`;

exports[`Model E2E Test common functions Test common functions Test Environment getContext() 1`] = `"environment=qa,region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Environment getParents() 1`] = `
[
  "region",
]
`;

exports[`Model E2E Test common functions Test common functions Test Environment getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Environment synth() 1`] = `
{
  "environmentName": "qa",
  "environmentVariables": {},
}
`;

exports[`Model E2E Test common functions Test common functions Test Execution getAncestors() 1`] = `
[
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "environment=qa,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Execution getBoundaryMembers() 1`] = `
[
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "environment=qa,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Execution getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Execution getContext() 1`] = `"execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Execution getParents() 1`] = `
[
  "deployment",
  "environment",
  "subnet",
]
`;

exports[`Model E2E Test common functions Test common functions Test Execution getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Execution synth() 1`] = `
{
  "deployment": {
    "context": "deployment=v1,server=backend,account=account,app=test",
  },
  "environment": {
    "context": "environment=qa,region=region,account=account,app=test",
  },
  "environmentVariables": {},
  "subnet": {
    "context": "subnet=region-public,region=region,account=account,app=test",
  },
}
`;

exports[`Model E2E Test common functions Test common functions Test Filesystem getAncestors() 1`] = `
[
  "filesystem=filesystem,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Filesystem getBoundaryMembers() 1`] = `
[
  "filesystem=filesystem,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Filesystem getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Filesystem getContext() 1`] = `"filesystem=filesystem,region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Filesystem getParents() 1`] = `
[
  "region",
]
`;

exports[`Model E2E Test common functions Test common functions Test Filesystem getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Filesystem synth() 1`] = `
{
  "filesystemName": "filesystem",
}
`;

exports[`Model E2E Test common functions Test common functions Test Image getAncestors() 1`] = `
[
  "image=image:v1,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Image getBoundaryMembers() 1`] = `
[
  "image=image:v1,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Image getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Image getContext() 1`] = `"image=image:v1,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Image getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test common functions Test Image getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Image synth() 1`] = `
{
  "dockerOptions": {
    "dockerfilePath": "/Dockerfile",
  },
  "imageId": "v1",
  "imageName": "image",
  "imageTag": "v1",
}
`;

exports[`Model E2E Test common functions Test common functions Test Pipeline getAncestors() 1`] = `
[
  "pipeline=pipeline,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Pipeline getBoundaryMembers() 1`] = `
[
  "pipeline=pipeline,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Pipeline getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Pipeline getContext() 1`] = `"pipeline=pipeline,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Pipeline getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test common functions Test Pipeline getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Pipeline synth() 1`] = `
{
  "instructionSet": [],
  "pipelineName": "pipeline",
}
`;

exports[`Model E2E Test common functions Test common functions Test Region getAncestors() 1`] = `
[
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Region getBoundaryMembers() 1`] = `
[
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
  "filesystem=filesystem,region=region,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Region getChildren() 1`] = `
[
  "environment",
  "filesystem",
  "subnet",
]
`;

exports[`Model E2E Test common functions Test common functions Test Region getContext() 1`] = `"region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Region getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test common functions Test Region getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Region synth() 1`] = `
{
  "regionId": "region",
}
`;

exports[`Model E2E Test common functions Test common functions Test Server getAncestors() 1`] = `
[
  "server=backend,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Server getBoundaryMembers() 1`] = `
[
  "server=backend,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Server getChildren() 1`] = `
[
  "deployment",
]
`;

exports[`Model E2E Test common functions Test common functions Test Server getContext() 1`] = `"server=backend,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Server getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test common functions Test Server getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Server synth() 1`] = `
{
  "serverKey": "backend",
}
`;

exports[`Model E2E Test common functions Test common functions Test Service getAncestors() 1`] = `
[
  "service=service,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Service getBoundaryMembers() 1`] = `
[
  "service=service,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Service getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Service getContext() 1`] = `"service=service,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Service getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test common functions Test Service getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test common functions Test Service synth() 1`] = `"Method not implemented! Use subclass"`;

exports[`Model E2E Test common functions Test common functions Test Subnet getAncestors() 1`] = `
[
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Subnet getBoundaryMembers() 1`] = `
[
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test common functions Test Subnet getChildren() 1`] = `
[
  "execution",
]
`;

exports[`Model E2E Test common functions Test common functions Test Subnet getContext() 1`] = `"subnet=region-public,region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test common functions Test Subnet getParents() 1`] = `
[
  "region",
]
`;

exports[`Model E2E Test common functions Test common functions Test Subnet getSiblings() 1`] = `
[
  "subnet",
]
`;

exports[`Model E2E Test common functions Test common functions Test Subnet synth() 1`] = `
{
  "options": {
    "disableSubnetIntraNetwork": false,
    "subnetType": "private",
  },
  "region": {
    "context": "region=region,account=account,app=test",
  },
  "subnetId": "region-public",
  "subnetName": "public",
}
`;

exports[`Model E2E Test getAncestors() should include parent of parent as ancestors 1`] = `
[
  "environment=env-0,region=region-0,account=account,app=app",
  "region=region-0,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should include sibling dependency as ancestor with explicit behavior 1`] = `
[
  "service=service,account=account,app=app",
  "region=region,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should not include children as ancestor 1`] = `
[
  "region=region-0,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should not include sibling dependency as ancestor without explicit behavior 1`] = `
[
  "service=service,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should not include sibling dependency as ancestor without explicit behavior 2`] = `
[
  "region=region,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should demonstrate how boundaries can explode because of a common model 1`] = `
[
  "region=region-1,account=account,app=test-app",
  "account=account,app=test-app",
  "app=test-app",
  "environment=qa,region=region-1,account=account,app=test-app",
  "region=region-2,account=account,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include models in boundary after they are added as dependents 1`] = `
[
  "region=region,account=account,app=test-app",
  "account=account,app=test-app",
  "app=test-app",
  "subnet=region-subnet,region=region,account=account,app=test-app",
  "execution=server-deployment-region-qa-subnet,deployment=deployment,server=server,account=account,app=test-app,environment=qa,region=region,account=account,app=test-app,subnet=region-subnet,region=region,account=account,app=test-app",
  "environment=qa,region=region,account=account,app=test-app",
  "deployment=deployment,server=server,account=account,app=test-app",
  "server=server,account=account,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include models in boundary after they are added as dependents 2`] = `
[
  "server=server,account=account,app=test-app",
  "account=account,app=test-app",
  "app=test-app",
  "deployment=deployment,server=server,account=account,app=test-app",
  "execution=server-deployment-region-qa-subnet,deployment=deployment,server=server,account=account,app=test-app,environment=qa,region=region,account=account,app=test-app,subnet=region-subnet,region=region,account=account,app=test-app",
  "subnet=region-subnet,region=region,account=account,app=test-app",
  "region=region,account=account,app=test-app",
  "environment=qa,region=region,account=account,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include sibling dependency in boundary 1`] = `
[
  "region=region,account=account,app=app",
  "account=account,app=app",
  "app=app",
  "service=service,account=account,app=app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include sibling's sibling in boundary 1`] = `
[
  "region=region-1,account=account,app=app",
  "account=account,app=app",
  "app=app",
  "image=imageName:v1,account=account,app=app",
  "region=region-2,account=account,app=app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should not include non-dependents in boundary 1`] = `
[
  "region=region,account=account,app=test-app",
  "account=account,app=test-app",
  "app=test-app",
]
`;
